--- a/compose.yaml
+++ b/compose.yaml
@@ -49,6 +49,9 @@ services:
       timeout: 5s
       retries: 5
       start_period: 60s
+    ports:
+      - target: 5432
+        published: ${HTTP_PORT:-5432}
     volumes:
       - database_data:/var/lib/postgresql/data:rw
       # You may use a bind-mounted host directory instead, so that it is harder to accidentally remove the volume and lose all your data!
